# exchain

./: .gitattributes  .gitignore  .golangci.yml  1.txt  123.sh  2.txt  3.txt  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Espacios de código de GitHub  LICENSE  Makefile  OKX Chaín  README.Md  README.md  Readme.md  SMART_CONTRACT.md  biao.sh  check.sh  codecov.yml  docker-compose.yml  go.mod  go.sum  grep  integraciones  main.go  ok cadena  replay.sh  scf.sh  test  tmp.sh
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  node.md
.github/workflows/: ci-build.yml  ci-cosmos-sdk-ut.yml  ci-exchain-ut.yml  ci-iavl-ut.yml  ci-libs-ut.yml  ci-okbchain-ut.yml  ci-tendermint-ut.yml  ci-tm-db-ut.yml  ci-tmdb-ut.yml  circle-ut.yml  exchain-ut.yml  golangci-lint.yml  golangci-ut.yml  x-evm-ut.yml
app/: abci.go  alias.go  app.go  app_abci.go  app_back.go  app_ibc_adapter.go  app_parallel.go  app_parallel_test.go  app_partial_concurrent.go  app_test.go  app_upgrade.go  app_upgrade_test.go  calc_block_gas_test.go  ci_test.go  elapse.go  elapse_info.go  engine.go  export.go  fake_block_gas_test.go  gasprice_test.go  gp_index.go  innertx_test.go  node_mode.go  repair_state.go  repair_state_test.go  simulation_test.go  start_from_snapshot.go  test_common.go  test_helpers.go
app/ante/: AccountAggregateValidationDecorator.go  AccountBlockedVerificationDecorator.go  AccountSetupDecorator.go  AccountVerificationDecorator.go  EthGasConsumeDecorator.go  EthMempoolFeeDecorator.go  EthSetupContextDecorator.go  EthSigVerificationDecorator.go  FastETHExecuteDecorator.go  GasLimitDecorator.go  IncrementSeqDecorator.go  NonceVerificationDecorator.go  account.go  ante.go  ante_builder.go  ante_test.go  checked_ante.go  checked_handler.go  eth.go  handler.go  newante.go  signature.go  signature_test.go  tx_sign.go  utils.go  utils_test.go  validateMsg.go  wrapWasmCountTXDecorator.go
app/codec/: codec.go
app/config/: apollo.go  config.go  config_test.go  local.go  oipConfig.go  pprof.go
app/core/: chain.go
app/crypto/: algorithm.go  algorithm_test.go
app/gas/: gas.go
app/gasRefund/: gasRefund.go
app/gasprice/: gasprice.go  gasprice_test.go
app/genesis/: genesis.json
app/logevents/: kafka.go  provider.go  provider_test.go  subscriber.go
app/patch/: patch.go
app/protocol/: engine.go  engine_test.go  mock_protocol.go  mock_protocol_test.go  protocol_v0.go  protocol_v0_test.go  store_keys.go  test_common.go  types.go  types_test.go
app/refund/: refund.go
app/rpc/: apis.go  backend.go  cmd.go  config.go  eth_api.go  filter_api.go  filter_system.go  net_api.go  personal_api.go  web3_api.go  websockets.go
app/statistic/: time_statistic.go  time_statistic_test.go
app/testdata/: freecall.sol  freecall.wasm  testerc20.sol
app/types/: account.go  account_test.go  address_test.go  chain_id.go  chain_id_test.go  codec.go  codec_test.go  coin.go  config.go  config_test.go  errors.go  gasprice.go  node_mode.go  params.go  protocol.go  wrapped_tx.go
app/utils/: goroutine.go  goroutine_test.go  innertx.go  int.go  utils.go  utils_test.go
app/version/: version.go
benchmark/json/: benchjson_test.go  benchmark.go
benchmarks/: app_test.go  bench_test.go  oip20_test.go
cmd/: rest.go
cmd/client/: addr.go  config.go  export.go  flags.go  keys.go  pruning.go  rest.go  testnet.go
cmd/exchaincli/: main.go
cmd/exchaind/: compact.go  data.go  data_empty.go  data_norocksdb.go  data_rocksdb.go  data_stats.go  (+22 more)
common/: util.go
dev/: auto-install.sh  bytecode-proposal.sh  check-version.sh  cw4-stake.sh  deposit.sh  dump.sh  erc20.sh  escrow.sh  evmtx.sh  getbalance.sh  import_tikv.sh  keplr-test.sh  local-perf.sh  localvote.sh  os.sh  param-change-okb.json  param-change-okt2okb.json  param-change.json  proposal-change-distr-type-1.json  protoc-gen.sh  pruning.sh  replay.sh  resets0.sh  restart.sh  run.sh  rust.sh  sendtoevm.sh  snapshot.sh  start.sh  sub.sh  test.json  tx.sh  vmbridge.sh  wasm-allcases.sh  wasm-proposal.sh  wasm-test-zjg.sh  wasm-test.sh
dev/vmbridge/counter/wasmContract/Counter/: Cargo.toml
dev/vmbridge/counter/wasmContract/Counter/examples/: schema.rs
dev/vmbridge/counter/wasmContract/Counter/src/: contract.rs  lib.rs  msg.rs  state.rs
dev/wasm/cross-call/caller/: Cargo.toml  README.md
dev/wasm/cross-call/caller/src/: contract_funds.rs  contract_simple.rs  contract_simple_instantiate.rs  contract_use_return.rs  errors.rs  lib.rs  msg.rs  state.rs
dev/wasm/cw20-base/: Cargo.toml  NOTICE
dev/wasm/cw20-base/artifacts/: cw20_base.wasm
dev/wasm/cw20-base/examples/: schema.rs
dev/wasm/cw20-base/src/: allowances.rs  contract.rs  enumerable.rs  error.rs  lib.rs  msg.rs  state.rs
dev/wasm/erc20/: Cargo.toml  LICENSE  NOTICE
dev/wasm/erc20/artifacts/: cw_erc20-aarch64.wasm
dev/wasm/erc20/src/: contract.rs  error.rs  lib.rs  msg.rs
dev/wasm/escrow/: .gitignore  Cargo.toml  Developing.md  Importing.md  NOTICE  Publishing.md  README.md
dev/wasm/escrow/.cargo/: config
dev/wasm/escrow/artifacts/: cw_escrow-aarch64.wasm
dev/wasm/escrow/examples/: schema.rs
dev/wasm/escrow/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
dev/wasm/escrow/tests/: integration.rs
global/: ibc.go
ics23/: ops.go
pkg/: analys.go  base.go  const.go  oper.go  tx.go  util.go
temp/: account.go  query.pb.go
(+7725 files in other folders)
