[package]
name = "caller"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Add feature "cranelift" to default if you need 32 bit or ARM support
default = []
# Use cranelift backend instead of singlepass. This is required for development on 32 bit or ARM machines.
cranelift = ["cosmwasm-vm/cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code --env https_proxy=http://192.168.0.105:4780  \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0
"""

[dependencies]
cosmwasm-std = { git = "https://github.com/okx/cosmwasm.git", rev = "v1.3.0" }
cosmwasm-schema = { git = "https://github.com/okx/cosmwasm.git", rev = "v1.3.0" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
cosmwasm-storage = { git = "https://github.com/okx/cosmwasm.git", rev = "v1.3.0" }
cosmwasm-vm = { git = "https://github.com/okx/cosmwasm.git", rev = "v1.3.0", default-features = false, features = ["iterator"] }
